argocd/app.yaml
# =========================
# FRONTEND DEPLOYMENT
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-app-frontend
  template:
    metadata:
      labels:
        app: student-app-frontend
    spec:
      containers:
        - name: frontend
          image: dikshat1024/student-frontend:b2b415a3533a2b82f85c6f43c7be476c331e9bb2
          ports:
            - containerPort: 80
          resources:
             requests:
              cpu: 200m
              memory: 100Mi
             limits:
              cpu: 500m
              memory: 200Mi

---
# FRONTEND SERVICE
apiVersion: v1
kind: Service
metadata:
  name: student-app-frontend-svc
  namespace: default
spec:
  selector:
    app: student-app-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---
# =========================
# BACKEND DEPLOYMENT
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-app-backend
  template:
    metadata:
      labels:
        app: student-app-backend
    spec:
      containers:
        - name: backend
          image: dikshat1024/student-frontend:b2b415a3533a2b82f85c6f43c7be476c331e9bb2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 200Mi

---
# BACKEND SERVICE
apiVersion: v1
kind: Service
metadata:
  name: student-app-backend-svc
  namespace: default
spec:
  selector:
    app: student-app-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP

---
# =========================
# INGRESS
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # FRONTEND
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-app-frontend-svc
                port:
                  number: 80

          # BACKEND
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: student-app-backend-svc
                port:
                  number: 8080
---

# =========================
# MONGO DEPLOYMENT (WITH PVC)
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: dikshat1024/student-frontend:b2b415a3533a2b82f85c6f43c7be476c331e9bb2
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
              
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
